--- a/index.css
+++ b/index.css
@@ -1,4 +1,117 @@
-body {
-  max-width: 1000px;
-  margin: 0 auto;
+/* reset tag style */
+p,
+div,
+ul,
+li,
+span,
+h1,
+h2,
+h3,
+h4 {
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+/* common style */
+section {
+  max-width: 900px;
+  margin: 0 auto 5em;
+  padding: 0 10px;
+  font-weight: 100;
+  line-height: 1.7;
+}
+h2 {
+  font-size: 2em;
+  border-bottom: 1px solid #000;
+  padding-bottom: 10px;
+}
+.contents {
+  padding: 2em 0;
+}
+
+/* about me */
+#aboutMe {
+  padding: 5em 0;
+}
+#aboutMe h1 {
+  border-bottom: 5px solid #ff7b00;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+  font-size: 3em;
+  font-weight: inherit;
+  line-height: 1.2;
+}
+#aboutMe h1 span {
+  font-weight: 900;
+}
+#aboutMe ul {
+  list-style-type: disc;
+  padding-left: 2em;
+  padding-top: 1em;
+}
+#aboutMe p a {
+  display: inline-block;
+  padding-right: 0.5em;
+}
+
+/* Work Experience */
+#workExperience ul li {
+  display: flex;
+}
+#workExperience ul li .title {
+  width: 30%;
+}
+#workExperience ul li .detail {
+  flex: 1;
+}
+#workExperience .description {
+  background: rgba(0, 0, 0, 0.05);
+  padding: 10px;
+}
+#workExperience .detail ul {
+  padding-left: 2em;
+  padding-top: 1em;
+}
+#workExperience .detail ul li {
+  position: relative;
+}
+#workExperience .detail ul li::before {
+  position: absolute;
+  content: "•";
+  left: -1em;
+}
+
+/* projects */
+#projects .contents {
+  display: flex;
+}
+#projects .contents .project {
+  width: 31%;
+  margin: 0 1%;
+}
+#projects .contents .project .image-box {
+  width: 100%;
+  border: 1px solid #000;
+  background: #ff7b00;
+  height: 100px;
+  margin-bottom: 1em;
+}
+#projects .contents .project .stack span {
+  background: #000;
+  color: #fff;
+  font-size: 0.8em;
+  padding: 0 5px;
+  border-radius: 30px;
+  display: inline-block;
+}
+#projects .contents .project .description {
+  padding: 1em 0;
 }
